--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="images/box1.png" alt="монітор, клавіатура" width="370" height="294" /></li>
-          <li><img src="images/box2.png" alt="телефон і ноутбук" width="370" height="294" /></li>
-          <li><img src="images/box3.png" alt="планшет" width="370" height="294" /></li>
+          <li><img src="images./box1.jpg" alt="монітор, клавіатура" width="370" height="294" /></li>
+          <li><img src="images./box2.jpg" alt="телефон і ноутбук" width="370" height="294" /></li>
+          <li><img src="images./box3.jpg" alt="планшет" width="370" height="294" /></li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="images/teamcard1.jpg" alt="ігор дем'яненко" width="270" height="260" />
+            <img src="images./teamcard1.jpg" alt="ігор дем'яненко" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/teamcard2.jpg" alt="ольга рєпіна" width="270" height="260" />
+            <img src="images./teamcard2.jpg" alt="ольга рєпіна" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/teamcard3.jpg" alt="микола тарасов" width="270" height="260" />
+            <img src="images./teamcard3.jpg" alt="микола тарасов" width="270" height="260" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/teamcard4.jpg" alt="михайло єрмаков" width="270" height="260" />
+            <img src="images./teamcard4.jpg" alt="михайло єрмаков" width="270" height="260" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
@@ -87,7 +87,11 @@
     </main>
     <footer>
       <a href="/">WebStudio</a>
-      <address>м. Київ, пр-т Лесі Українки, 26 info@devstudio.com +38 096 111 11 11</address>
+      <address>
+        <a href="#">Київ, пр-т Лесі Українки,26 </a>
+        <a href="mailto:">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
     </footer>
   </body>
 </html>
