--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="images./teamcard1.jpg" alt="ігор дем'яненко" width="270" height="260" />
+            <img src="images/teamcard1.jpg" alt="ігор дем'яненко" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images./teamcard2.jpg" alt="ольга рєпіна" width="270" height="260" />
+            <img src="images/teamcard2.jpg" alt="ольга рєпіна" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images./teamcard3.jpg" alt="микола тарасов" width="270" height="260" />
+            <img src="images/teamcard3.jpg" alt="микола тарасов" width="270" height="260" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images./teamcard4.jpg" alt="михайло єрмаков" width="270" height="260" />
+            <img src="images/teamcard4.jpg" alt="михайло єрмаков" width="270" height="260" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
