--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="images./box1.jpg" alt="монітор, клавіатура" width="370" height="294" /></li>
-          <li><img src="images./box2.jpg" alt="телефон і ноутбук" width="370" height="294" /></li>
-          <li><img src="images./box3.jpg" alt="планшет" width="370" height="294" /></li>
+          <li><img src="images/box1.jpg" alt="монітор, клавіатура" width="370" height="294" /></li>
+          <li><img src="images/box2.jpg" alt="телефон і ноутбук" width="370" height="294" /></li>
+          <li><img src="images/box3.jpg" alt="планшет" width="370" height="294" /></li>
         </ul>
       </section>
       <section>
